samples/_failures_safe/1761691921_83d73a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_88e1d1d5.c: In function ‘print_stats’:
./samples/SAFE/__tmp_88e1d1d5.c:130:11: error: expected ‘;’ at end of input
  130 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_88e1d1d5.c:130:5: error: expected declaration or statement at end of input
  130 |     printf
      |     ^~~~~~
